-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
159
-
None
-
None
-
None
-
None
-
None
-
None
-
None
There is a recently-added invariant in SBE's PlanStage::saveState() checking that the stage is not already in a "saved" state.
It is possible to get a WCE while restoring() a plan executor. If this happens, the plan will actually be left in a "partially" restored state, with some stages still in a "saved" state. When retrying the save/restore, the invariant in saveState() about the stage not already being in a saved state will trip.
We should delete this invariant and relax others as necessary.