SERVER-60707 Remove invariant from SBE stages.h